@@ -28,15 +28,7 @@ module Devise
           actions.each do |action|
             class_eval <<-URL_HELPERS
               def #{action}#{module_name}_#{path_or_url}(resource, *args)
-                resource = case resource
-                  when Symbol, String
-                    resource
-                  when Class
-                    resource.name.underscore
-                  else
-                    resource.class.name.underscore
-                end
-
+                resource = Devise::Mapping.find_scope!(resource)
                 send("#{action}\#{resource}_#{module_name}_#{path_or_url}", *args)
               end
             URL_HELPERS
